test_scripts/errors/multiline_if_else_span.shm
let x = if true {
    undefined_var
} else {
    2
};
