test_scripts/errors/multiline_if_else_span.stderr
 1 | let x = if true {
 2 |     undefined_var
         ^^^^^^^^^^^^^
 3 | } else {
 4 |     2
Error: Unknown identifier "undefined_var"
